--- a/public/template/lightbox_follow.html
+++ b/public/template/lightbox_follow.html
@@ -39,44 +39,10 @@
     </div>
     <div class="fancybox-wrap fancybox-default fancybox-opened" style="width: 500px; height: auto; display: block; position: fixed; top: 192px; left: 602px; overflow: visible;">
         <div class="fancybox-outer" style="width: auto; height: auto;">
-            <div class="fancybox-inner">
+            <div class="fancybox-inner follow">
             <div style="" id="comment_form">
-                <h3 class="title">关注这支酒</h3>
-                <p class="light_nor"><a href="#">收起</a> <a href="#"><img src="images/icon/close.gif" width="13" height="13" /></a></p>
-                <form novalidate="novalidate" method="post" id="new_wine_comment" data-validate="true" class="new_wine_comment" action="/wines/254/comments" accept-charset="UTF-8"><div style="margin:0;padding:0;display:inline"><input type="hidden" value="✓" name="utf8"><input type="hidden" value="XIKuWYLJfskIi11fzIhaYh3NcsDoLu479/qy/xf8sHc=" name="authenticity_token"></div><input type="hidden" value="comment" name="wine_comment[do]" id="wine_comment_do">
-                <div style="display:">
-                <div id="wine_profile_star_bar" class="star_rate">
-                  <table cellspacing="5" cellpadding="5" border="0">
-                    <tbody><tr>
-                      <td>评价:</td>
-                      <td>
-                        <ul id="stars">
-                            <li id="star_1" class="star">
-                          <img width="16" height="16" src="images/icon/star_gray.gif" alt="Star_gray">
-                         </li><li id="star_2" class="star">
-                          <img width="16" height="16" src="images/icon/star_gray.gif" alt="Star_gray">
-                         </li><li id="star_3" class="star">
-                          <img width="16" height="16" src="images/icon/star_gray.gif" alt="Star_gray">
-                         </li><li id="star_4" class="star">
-                          <img width="16" height="16" src="images/icon/star_gray.gif" alt="Star_gray">
-                         </li><li id="star_5" class="star">
-                          <img width="16" height="16" src="images/icon/star_gray.gif" alt="Star_gray">
-                         </li>
-                     </ul>
-                      </td>
-                      <td>
-                        <input type="hidden" value="0" name="rate_value">
-                        <span class="text_value"></span>
-                      </td>
-                    </tr>
-                  </tbody></table>
-                </div>
-                <div class="clear"> </div>
-              <div class="text_area">
-                <p class="label">简短评论: </p>
-                <textarea rows="10" name="wine_comment[body]" id="wine_comment_body" data-validate="true" cols="25"></textarea>
-              </div>
-              </div>
+                <h3 class="title">我要关注这支酒</h3>
+                <form>
               <div class="share relative">
                 <a href="#" class="btn_gray float_r"><span>保存</span></a>
                 分享到 <input type="hidden" value="0" name="wine_comment[is_share]"><input type="checkbox" value="1" name="wine_comment[is_share]" id="wine_comment_is_share" checked="checked"> 广播
