--- a/public/template/user_profile.html
+++ b/public/template/user_profile.html
@@ -83,8 +83,8 @@
                        <textarea name="" cols="" rows=""></textarea>
                    </div>
                   <div class="optional">
-               		<label>通知设置</label>
-                      <a href="user_notice_setting.html" class="btn_gray"><span>更改通知设置</span></a>
+               		<label>隐私/通知设置</label>
+                      <a href="user_notice_setting.html" class="btn_gray"><span>更改隐私/通知设置</span></a>
                    </div>
                   <div class="optional">
                		<label style="padding-top:13px;">同步设置</label>
