--- a/app/views/themes/waterfall/users/wine_follows.html.erb
+++ b/app/views/themes/waterfall/users/wine_follows.html.erb
@@ -10,7 +10,7 @@
         </div>
         <%= render "users/share/wine_follows" %>
         <div class="pagination">
-          <%= paginate @comments %>
+          <%= paginate @follows %>
           <!-- pagination  end   -->
         </div>      
       </div>
