--- a/app/views/themes/waterfall/wine_details/share/_buttons.html.erb
+++ b/app/views/themes/waterfall/wine_details/share/_buttons.html.erb
@@ -11,22 +11,22 @@
 <div>
 	
 	<% unless user_signed_in? %>
-	<%= link_to  new_wine_comment_path(@wine_detail.id), 
+	<%= link_to  new_wine_follow_path(@wine_detail.id), 
 	                                   :class => [:btn_gray, :mr5, :ajax], 
 	                                   :remote => true do %>
 		<span>关注</span>
 	<% end %>
 	<%# 用户已经登录， 检查是否已经关注 %>
 	<% else %>
-		 <%  if @wine_detail.is_followed? current_user %>
+		 <%  if @wine_detail.is_followed_by? current_user %>
 			<span class="icon_fol mr5">
 					已关注
 				<span class="cancl_fol">
-					 <%= link_to "(取消)", cancle_follow_wine_comments_path(@wine_detail) %>
+					 <%= link_to "(取消)", wine_follow_path(@wine_detail), :method => :delete %>
 				</span>
 		  </span>
 		 <% else %>
-				<%= link_to new_wine_comment_path(@wine_detail.id, :do => "follow"), 
+				<%= link_to new_wine_follow_path(@wine_detail.id), 
 							                            :class => [:btn_gray, :mr5, :ajax], 
 							                            :remote => true do %>
 					<span>关注</span>
