--- a/app/views/themes/waterfall/wine_details/show.html.erb
+++ b/app/views/themes/waterfall/wine_details/show.html.erb
@@ -6,6 +6,9 @@
 <div id="comment_form"  style="display: none" >
 
 </div>
+<div id="follow_form"  style="display: none" >
+
+</div>
 <div id="add_to_cellar_form"  style="display: none" >
 
 </div>
