--- a/app/views/themes/waterfall/follows/_follow_form.html.erb
+++ b/app/views/themes/waterfall/follows/_follow_form.html.erb
@@ -1,7 +1,7 @@
 <div style="" id="comment_form">
   <h3 class="title"> 我要关注 </h3>
   <%= form_for [follow] do |f| -%>
-  <div class="share relative">
+  <div class="share relative" style="border: 0">
     <%= link_to "javascript:void(0)", :class => "btn_gray float_r", :onclick => "$(this).parents('form').submit()" do  %>
     <span>关注</span>
     <% end %>
