--- a/public/template/user_notice_setting.html
+++ b/public/template/user_notice_setting.html
@@ -49,7 +49,11 @@
                         <p><label><input name="" type="checkbox" value="" /> 默认分享</label></p>
                     </div>
                     <div class="set_optional">
-                        <h3>发表对酒款的评论</h3>
+                        <h3>发表了新的评论</h3>
+                        <p><label><input name="" type="checkbox" value="" /> 默认分享</label></p>
+                    </div>
+                     <div class="set_optional">
+                        <h3>关注了酒/酒庄</h3>
                         <p><label><input name="" type="checkbox" value="" /> 默认分享</label></p>
                     </div>
                 </div>	
@@ -73,8 +77,6 @@
                         我收到一条回复或评论</label></p>
                         <p><label><input name="" type="checkbox" value="" /> 
                         我被某人关注</label></p>
-                        <p><label><input name="" type="checkbox" value="" /> 
-                        我的酒评被收藏</label></p>
                         <p><label><input name="" type="checkbox" value="" /> 
                         关于新iWine产品功能和技巧的更新</label></p>
                         <p><label><input name="" type="checkbox" value="" /> 
