--- a/app/views/themes/waterfall/wine_details/show.html.erb
+++ b/app/views/themes/waterfall/wine_details/show.html.erb
@@ -47,7 +47,9 @@
 </div>
 <div id="wp_right">
   <%= render "wine_details/share/resource" %>
-  <%= render "wine_details/share/spec"%>
+  <% cache("1000-#{@wine_detail.id}-#{@wine_detail.updated_at.to_i}-data") do %>
+   <%= render "wine_details/share/spec"%>
+  <% end %>
   <%= render "wine_details/share/score"%>
   <%= render "wine_details/share/special_comments"%>
   <%= render "wine_details/share/price"%>
