--- a/app/views/themes/waterfall/comments/_comments.html.erb
+++ b/app/views/themes/waterfall/comments/_comments.html.erb
@@ -7,7 +7,7 @@
 		<h2>
 		  评论
 		  <span class="font12 more">
-		    <%= link_to "(#{@wine_detail.comments_count}条...)", wine_comments_path(@wine_detail.id)%>
+		    <%= link_to "(共#{@wine_detail.comments_count}条...)", wine_comments_path(@wine_detail.id)%>
 		  </span>
 		</h2>
 		<% end %>
