--- a/public/template/album_photo_upload.html
+++ b/public/template/album_photo_upload.html
@@ -41,9 +41,9 @@
     	<div class="whitespace">
         <div id="hp" class="min_height" >
           <div class="hp_header">
-            <div class="hp_right"><a href="cellar.html" class="btn_red_sb"><span>我的酒窖</span></a></div>
             <div class="hp_userimg"><a href="#"><img src="images/userimage/p130.jpg" width="130" height="130" alt="usrename" /></a></div>
             <div class="hp_info">
+                <div class="hp_right"><a href="cellar.html" class="btn_red_sb"><span>我的酒窖</span></a></div>
                 <div class="username">不良夏生</div>
                 <div class="mystatu">准备小宇宙爆发...<span><a href="#">修改</a></span></div>
                 <div class="item"><a class="icon_mail" href="#">私信</a> | <a href="#">设置</a></div>
@@ -75,7 +75,8 @@
               <option>小朋友们</option>
               </select>
               <a href="#" class="icon_add_album add_album">新建相册</a></p>
-            <p class="mb20"><input class="text mr5" name="" type="text" size="50" /><a href="album_photo_upload3.html" class="btn_blue_b mr5"><span>选择图片</span></a></p>
+            <p class="mb10"><input class="text mr5" name="" type="text" size="50" /><a href="album_photo_upload3.html" class="btn_blue_b mr5"><span>选择图片</span></a></p>
+            <p class="mb20">每次最多上传10张图片；每张图片最大为5MB。我们仅支持以下格式图片：JPEG、PNG、GIF。</p>
             <div class="uploade">
             	<table width="100%" border="0" cellspacing="0" cellpadding="0">
                   <tr>
