--- a/app/views/themes/waterfall/users/winery_follows.html.erb
+++ b/app/views/themes/waterfall/users/winery_follows.html.erb
@@ -11,7 +11,7 @@
       </div>
       <%= render "users/share/winery_follows" %>
       <div class="pagination">
-	    <%= paginate @comments %>
+	    <%= paginate @follows %>
       <!-- pagination  end   -->
       </div>      
   </div>
