--- a/app/views/themes/waterfall/wineries/_winery_detail.html.erb
+++ b/app/views/themes/waterfall/wineries/_winery_detail.html.erb
@@ -1,3 +1,6 @@
+<div id="follow_form"  style="display: none" >
+
+</div>
 <div class="winery_header">
    <div class="cover">
      <%= winery_cover_tag(@winery, :thumb_name => :middle_x, :width => 360, :alt => @winery.origin_name) %>
@@ -47,19 +50,26 @@
 
 
        <% unless user_signed_in? %>
-           <%= link_to  new_winery_comment_path(@winery.id, :do => "follow"), :class => [:btn_gray_b, :mr5, :ajax], :remote => true do %>
-               <span>关注</span>
+
+           <%= link_to  new_winery_follow_path(@winery.id), 
+                                              :class => [:btn_gray_b, :mr5, :ajax], 
+                                              :remote => true do %>
+             <span>关注</span>
            <% end %>
            <%# 用户已经登录， 检查是否已经关注 %>
        <% else %>
-           <%  if @winery.is_followed? current_user %>
-			<span class="icon_fol mr5">已关注
-				 <span class="cancl_fol"><%= link_to "取消", cancle_follow_winery_comments_path(@winery.id) %></span>
-			</span>
+           <%  if @winery.is_followed_by? current_user %>
+              <span class="icon_fol mr5">已关注
+                 <span class="cancl_fol">
+                  <%= link_to "取消", winery_follow_path(@winery.id), :method => :delete %>
+                 </span>
+              </span>
            <% else %>
-               <%= link_to new_winery_comment_path(@winery.id, :do => "follow"), :class => [:btn_gray_b, :mr5, :ajax], :remote => true do %>
-                   <span>关注</span>
-               <% end %>
+             <%= link_to  new_winery_follow_path(@winery.id), 
+                                                :class => [:btn_gray_b, :mr5, :ajax], 
+                                                :remote => true do %>
+               <span>关注</span>
+             <% end %>
            <% end %>
        <% end %>
 
