--- a/app/views/themes/waterfall/albums/index.html.erb
+++ b/app/views/themes/waterfall/albums/index.html.erb
@@ -27,7 +27,7 @@
             <% end %>
           <% end %>
           <h2>
-            <%= link_to album.name, albums_user_path(@user, album) %>
+            <%= link_to album.name, album_show_user_path(@user, album) %>
           </h2>
           <p class="info"><%= album.photos_count %>张照片 <%= album.updated_at.to_s(:normal) %>更新<br/>
           <%= album.viewed_num %>浏览 | <%= album.commented_num %>评论 | <%= album.likes.count %>赞</p>
