Fixed home Waterfall.
Signed-off-by: Weston <weixuhong@gmail.com>

--- a/app/views/themes/waterfall/home/index.html.erb
+++ b/app/views/themes/waterfall/home/index.html.erb
@@ -10,5 +10,21 @@
 </div>
 <div class="clear"></div>
 </div>
+
+<div class="loading" id="waterfall_loading" style="display: none">
+  <%= theme_image_tag "common/loading.gif", :size => "16x16", :alt => "loading", :align => :absmiddle %>
+  <span>更多的内容正在载入中，请稍等...</span>
+</div>
+<% unless @timelines.last_page? %>
+<p align="center" class="end_waterfall_text_info"></p>
+<% else %>
+<p align="center" class="end_waterfall_text_info">^_^ 已经到底了...</p>
+<% end %>
+<div id="gototop" class="indicator">
+  <a href="#header">
+     <%= theme_image_tag "common/totop.png", :size => "86x39", :alt => "回到页首" %>
+  </a>
+</div>
+
 <%= render "layouts/waterfall_js" %>
 
