热门酒款的搜索代码； 用户通知设置修改； 用户被关注或者评论有回复发送提醒邮件； 用户私信回话页面搜索。

--- a/app/views/themes/waterfall/settings/basic.html.erb
+++ b/app/views/themes/waterfall/settings/basic.html.erb
@@ -37,7 +37,7 @@
       <div class="required">
         <label><span>*</span>所在地</label>
         <div class="content">
-          <%= f.text_field :city %>
+          <%= f.text_field :city, :class => "text" %>
         </div>
       </div>
        <%= f.fields_for :profile do |p| %>
