酒的中文名展示； 酒庄profile关注酒庄的人css

--- a/app/views/themes/waterfall/home/_timeline.html.erb
+++ b/app/views/themes/waterfall/home/_timeline.html.erb
@@ -10,7 +10,7 @@
 				</div>
           <div class="iw_info">
               <h1>
-								<%= raw link_to l.receiverable.cname, wine_path(l.receiverable) %>
+								<%= raw wine_name_zh_link(l.receiverable.cname, l.receiverable) %>
 							</h1>
               <h2>
 					      <%= raw link_to l.receiverable.origin_name, wine_path(l.receiverable) %>
@@ -52,7 +52,7 @@
 				</div>
           <div class="iw_info">
             <h1>
-							<%= raw link_to l.receiverable.cname, wine_path(l.receiverable) %>
+							<%= raw wine_name_zh_link(l.receiverable.cname, l.receiverable)%>
 						</h1>
             <h2>
 				      <%= raw link_to l.receiverable.origin_name, wine_path(l.receiverable) %>
@@ -108,7 +108,7 @@
 				 </div>
             <div class="iw_info">
               <h1>
-								<%= raw link_to l.receiverable.cname, wine_path(l.receiverable) %>
+								<%= raw wine_name_zh_link(l.receiverable.cname, l.receiverable) %>
 							</h1>
               <h2>
 					      <%= raw link_to l.receiverable.origin_name, wine_path(l.receiverable) %>
@@ -157,7 +157,7 @@
 					</div>
             <div class="iw_info">
               <h1>
-								<%= raw link_to l.receiverable.cname, wine_path(l.receiverable) %>
+								<%= raw wine_name_zh_link(l.receiverable.cname, l.receiverable) %>
 							</h1>
               <h2>
 					      <%= raw link_to l.receiverable.origin_name, wine_path(l.receiverable) %>
