--- a/app/views/themes/waterfall/static/_timeline.html.erb
+++ b/app/views/themes/waterfall/static/_timeline.html.erb
@@ -7,7 +7,7 @@
     </div>
       <div class="iw_info">
           <h1>
-            <%= raw link_to l.secondary_actor.cname, wine_path(l.secondary_actor) %>
+            <%= raw wine_name_zh_link(l.secondary_actor.cname, l.secondary_actor) %>
           </h1>
           <h2>
             <%= raw link_to l.secondary_actor.origin_name, wine_path(l.secondary_actor) %>
@@ -46,7 +46,7 @@
     </div>
       <div class="iw_info">
           <h1>
-            <%= raw link_to l.secondary_actor.cname, wine_path(l.secondary_actor) %>
+            <%= raw wine_name_zh_link(l.secondary_actor.cname, l.secondary_actor) %>
           </h1>
           <h2>
             <%= raw link_to l.secondary_actor.origin_name, wine_path(l.secondary_actor) %>
@@ -85,7 +85,7 @@
     </div>
       <div class="iw_info">
         <h1>
-          <%= raw link_to l.secondary_actor.cname, wine_path(l.secondary_actor) %>
+          <%= raw wine_name_zh_link(l.secondary_actor.cname, l.secondary_actor) %>
         </h1>
         <h2>
           <%= raw link_to l.secondary_actor.origin_name, wine_path(l.secondary_actor) %>
