--- a/app/views/themes/waterfall/users/share/_most_wine_follows.html.erb
+++ b/app/views/themes/waterfall/users/share/_most_wine_follows.html.erb
@@ -6,7 +6,7 @@
     <% end %>
     <div class="info">
     <h3 class="zh">
-      <%= link_to wine.cname, wine_path(wine) %>
+      <%= wine_name_zh_link(wine.cname, wine) %>
     </h3>
     <h3 class="en">
       <%= link_to wine.origin_name, wine_path(wine) %>
