--- a/app/views/themes/waterfall/cellar_items/add_step_two.html.erb
+++ b/app/views/themes/waterfall/cellar_items/add_step_two.html.erb
@@ -37,7 +37,7 @@
                   </div>
                   <div class="wine_info">
                     <h2>
-                      <%= link_to wine_detail.cname, wine_path(wine_detail.id) %>
+                      <%= wine_name_zh_link(wine_detail.cname, wine_detail) %>
                     </h2>
                     <h3><%= link_to wine_detail.origin_name, wine_path(wine_detail.id) %></h3>
                     <p><%= wine_detail.wine.region_path_zh %></p>
