--- a/app/views/themes/waterfall/searches/results.html.erb
+++ b/app/views/themes/waterfall/searches/results.html.erb
@@ -63,7 +63,7 @@
                <%= wine_label_tag(wine, :alt => releast_detail.origin_zh_name, :thumb_name => "thumb_x", :size => "70x70" )%>
             <% end %>
             <div class="info">
-              <h1 class="zh"><%= link_to wine.name_zh, wine_path(releast_detail) %></h1>
+              <h1 class="zh"><%= wine_name_zh_link(releast_detail.wine.name_zh, releast_detail) %></h1>
               <h1 class="en"><%= link_to wine.origin_name, wine_path(releast_detail) %></h1>
               <p><strong>年份：</strong></p>
               <p class="year">
