--- a/app/views/themes/waterfall/users/winery_follows.html.erb
+++ b/app/views/themes/waterfall/users/winery_follows.html.erb
@@ -17,9 +17,9 @@
   </div>
   <div class="right">
   	<div class="sidebox">
-      	<div class="title"><h3>热门酒款</h3></div>
+      	<div class="title"><h3>热门酒庄</h3></div>
           <div class="main">
-            <%= render "users/share/most_wine_follows" %>
+            <%= render "users/share/most_winery_follows" %>
           </div>
       </div>
   </div>
