--- a/app/views/themes/waterfall/wineries/show.html.erb
+++ b/app/views/themes/waterfall/wineries/show.html.erb
@@ -22,7 +22,7 @@
       </div>
       <%= render :partial => "info_item", :collection => @winery.info_items %>
       <div class="section">
-        <div class="title"><h2>所有酒款<span class="font12 more"><%= link_to "(共#{@winery.wines_count}支...)", wines_list_winery_path(@winery)  %></span></h2></div>
+        <div class="title"><h2>所有酒款<span class="font12 more"><%= link_to "(共#{@winery.wines_count}款...)", wines_list_winery_path(@winery)  %></span></h2></div>
         <div class="content">
           <ul class="wine_list">
             <%= render :partial => "wine", :collection => @wines %>
